--- a/index2.html
+++ b/index2.html
@@ -14,6 +14,7 @@
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
       crossorigin="anonymous"
+      
     ></script>
     <style>
       body {
@@ -26,7 +27,7 @@
     <title>Document</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary col-gap-3">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary column-gap-3">
         <a class="navbar-brand" href="#">Property</a>
       <div class="container-fluid d-flex justify-content-end gap-3">
         <button class="btn btn-success-outline " type="submit">Sign Up</button>
@@ -34,12 +35,12 @@
       </div>
     </nav>
     <property>
-    <div class="card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="...">
+    <div class="card column-gap-3 mt-3" style="width: 18rem; ">
+        <img src="https://picsum.photos/200" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Card title</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <a href="#" class="btn btn-danger">Buy</a>
         </div>
       </div>
     </property>
